# Multi-Agents-MCP

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
interface/: gui.py
multi_agents/: pipeline.py
multi_agents/agents/: agents.py  custom_agent.py
multi_agents/config/: schemas.py  settings.py
multi_agents/db/: connector.py  insert_data.py
multi_agents/mcp/: create_order_mcp.py  get_detail_mcp.py
multi_agents/tools/: create_order.py  get_detail.py
multi_agents/ui/: main.py
multi_agents/utils/: logging.py  parser.py
orders/: order_a1b2c3d4-e5f6-7890-1234-567890abcdef_12345.json  order_a1b2c3d4-e5f6-7890-1234-567890abcdef_130.json
storage/: inventory.json
