[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiagentos"
version = "0.1.0"
description = "Multi Agents with CrewAI for the field of sales"
authors = [
    { name = "Trongnguyen", email = "trongnguyen220603@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
keywords = []

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.119.0"
loguru = "0.7.3"
openai = "1.77.0"
pydantic = "2.11.4"
pydantic-settings = "2.9.1"
python-dotenv = "1.1.0"
requests = "2.32.3"
