[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "multiagentos"
version = "0.1.0"
description = "Multi Agents with CrewAI for the field of sales"
authors = ["Trongnguyen <trongnguyen220603@gmail.com>"]
readme = "README.md"
keywords = []

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.119.0"
loguru = "0.7.3"
openai = "1.77.0"
pydantic = "2.11.4"
pydantic-settings = "2.9.1"
python-dotenv = "1.1.0"
requests = "2.32.3"
pymongo = "4.12.1"
