[tool.poetry]
name = "multi-agents-function-calling"
version = "0.1.0"
description = ""
authors = ["Nguyen Van Trong <trongnguyen220603@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
crewai = "0.134.0"
httpx = "0.28.1"
loguru = "0.7.3"
openai = "1.91.0"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
pymongo = "4.13.2"
python-dotenv = "1.1.1"
streamlit = "1.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
